Manifests/upload-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upload-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: upload-api
  template:
    metadata:
      labels:
        app: upload-api
    spec:
      containers:
        - name: upload-api
          image: stran9682/uploadapi:latest
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: upload-api
spec:
  selector:
    app: upload-api
  ports:
    - port: 8080
      targetPort: 8080
